<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/adatokOlvasasaBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adatok_olvas_sa" />

    <Button
        android:id="@+id/adatokRogziteseBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adatok_r_gz_t_se" />

    <Button
        android:id="@+id/adatokModositasaBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adatok_m_dos_t_sa" />

    <Button
        android:id="@+id/adatTorlese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adat_t_rl_se" />

    <ScrollView
        android:id="@+id/SCROLLER_ID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/adatokTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:text="" />
    </ScrollView>
</LinearLayout>